# medical_dictation

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
memory/: MEMORY.md
sample/: generate_german_audio.py  generate_sample.py
src/medical_dictation/: __init__.py  extractor.py  main.py  transcriber.py
tests/: test_pipeline.py
